style.css
body {
	margin: 5% auto;
	background: #f2f2f2;
	color: #444444;
	font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif;
	font-size:100%;
	line-height: 1.8;
	text-shadow: 0 1px 0 #ffffff;
	max-width: 73%;
}

code {
	background: white;
}

a {
	text-decoration: none;
	color: #444444;
}

#name > a
{
	text-decoration: none;
	color: #ccc;
}
/*
a {
	border-bottom: 1px solid #444444;
	color: #444444;
	text-decoration: none;
}

a:hover {
	border-bottom: 0;
}
*/

#header{
  position:absolute;
  left:0;
  top:0;
  width:95%;
  padding-left:5%;

  font-size:125%;

  color:#ccc;
  background-color:#212121;
}

#headerImg{
	vertical-align:middle;
	flex:1;
	text-align:center;
	vertical-align:middle;
}

#headerImg > img {
	width:10vw;
	border-radius:50%;
}

#contact{
	flex:1;
	text-align:right;
	margin-right:5vw;
	margin-top:25px;
	vertical-align:middle;
	color:#ccc;
	text-shadow:none;
}

#imgZoom{
	display:none;
	position:fixed;
	top:0;
	left:0;
	background-color:rgba(33, 33, 33,.95);
	width:100%;
	height:100%;
	vertical-align:middle;
	text-align:center;
}

#imgZoom > p{
	position:fixed;
	top:-2vh;
	right:25px;
	z-index:100;
	color:#ccc;
	font-size:5vmax;
	cursor:pointer;
}

#imgZoom > img {
	margin-top:25vh;
	width:80vmin;
	border-radius:10px;
}

#tagline{
	text-align:center;
}

#taglineMobile{
	text-align:center;
	display:none;
}


h2{
	margin-bottom:-10px;
}

#main{
  width:90%;
  position:absolute;
  top:20vh;
  left:0;

  margin-left:5vw;
  margin-right:5vw;

}

.resumeBox{
	width:100%;

	veritcal-align:top;
	display:inline-block;
}

.resumeBox > h2{
	padding-left:30px;
	margin-bottom:0px;
	padding-bottom:0;

  border-radius:10px;
}
.resumeBox > div{
  width:100%;
	text-align: left;
	vertical-align:top;
	margin-top:0;
  padding-top:0px;
	padding-left:20px;
  padding-bottom:20px;

	border-top:5px #212121 solid;
  border-left:5px #212121 solid;
  border-radius:10px;
  margin-bottom:30px;
}

.portfolio{
  width:100%;
  display:flex;

  padding-top:20px;
  padding-bottom:20px;

  border-top:5px#212121 solid;
  border-bottom:5px#212121 solid;
  border-radius:10px;
  margin-bottom:30px;
}

.image{
	flex:1;
  vertical-align:middle;
  text-align:center;
	cursor:pointer;
}

.noMobileFlag{
	display:block;
}

.additionalImage{
	flex:1;
	vertical-align:middle;
	text-align:center;
	cursor:pointer;
}

.mobileImage{
	display:none;
	flex:1;
	vertical-align:middle;
	text-align:center;
	cursor:pointer;
}

.infoBox{
  flex:1;
  vertical-align:middle;
  text-align:center;
}

.portfolio > div > span > img{
  width:80%;
  margin-left:10%;
  vertical-align:top;
  display:inline-block;
  border-radius:10px;
}


.portfolio > div > h1{
	font-size:175%;
}

.icon{
	margin-left:3%;
	margin-right:3%;
}

.icon > img{
	width:3vw;
}

.iconTech{
	width:4vw;
	border-radius:2vmin;
	margin-right:10px;
}

.interestText{
	font-size:100%;
}


#qr{
	display:none;
	width:20%;
}

#links{
	display:none;
}


@media(orientation:portrait){
	body {
		font-size:50%;
	}
	.mobile{
		display:block;
	}
	.desktop{
		display:none;
	}
	#main{
		margin-top:-70px;
	}
	
	#headerImg{
		display:none;
	}

	#contact{
		margin-top:5px;
	}


	.icon > img{
		width:6vw;
	}

	.iconTech{
		width:6vw;
	}

	.infoBox {
		font-size:150%;
	}
	.infoBox > div {
		font-size:125%;
	}

	.info > p{
		display:none;

	}

	.description{
		display:none;
	}
	.image{
		flex:1.6;
		display:none;
	}
	.additionalImage{
		background-color:red;
		flex:0;
		display:none;
	}

	.mobileImage{
		display:block;
	}
	.noMobileFlag{
		display:block;
	}

	.interestText{
		font-size:85%;
	}

	#tagline{
		display:none;
	}
	#taglineMobile{
		display:block;
	}
}

@media(orientation:landscape){
	.mobile{
		display:none;
	}
	.desktop{
		display:block;
	}

	#tagline{
		display:block;
	}

	#taglineMobile{
		display:none;
	}

		#imgZoom > p{
			top:-10vh;
		}

}

/*
	Used to Print Resume
*/
@media print {

	#main{
		margin-top:-100px;
	}
	#headerImg{
		display:none;
	}
	#qr{
		display:block;
	}
	#links{
		display:block;
		display:none;
		position:absolute;
		width:40%;
		top:65vh;
	}

	.interestText{
		font-size:85%;
	}
}

